--- a/src/Hflex.MediatR.Extensions.Caching/Hflex.MediatR.Extensions.Caching.csproj
+++ b/src/Hflex.MediatR.Extensions.Caching/Hflex.MediatR.Extensions.Caching.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
     </ItemGroup>
 
