--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # Common IntelliJ Platform excludes
 
 # User specific
+.idea/**
 **/.idea/**/workspace.xml
 **/.idea/**/tasks.xml
 **/.idea/shelf/*
