Added Redis to webapisample

--- a/samples/WebApiSample.csproj
+++ b/samples/WebApiSample.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\src\Hflex.MediatR.Extensions.Caching\Hflex.MediatR.Extensions.Caching.csproj" />
     <ProjectReference Include="..\src\Hflex.MediatR.Extensions.InMemoryCaching\Hflex.MediatR.Extensions.InMemoryCaching.csproj" />
+    <ProjectReference Include="..\src\Hflex.MediatR.Extensions.Redis\Hflex.MediatR.Extensions.Redis.csproj" />
   </ItemGroup>
 
 </Project>
