--- a/samples/appsettings.json
+++ b/samples/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RedisConnectionString": "localhost:6379,allowAdmin=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
