--- a/src/Hflex.MediatR.Extensions.Caching/Hflex.MediatR.Extensions.Caching.csproj
+++ b/src/Hflex.MediatR.Extensions.Caching/Hflex.MediatR.Extensions.Caching.csproj
@@ -4,6 +4,15 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Title>MediatR extension for caching</Title>
+        <Description>MediatR extension for caching</Description>
+        <Copyright>2022</Copyright>
+        <PackageProjectUrl>https://github.com/hflexgrig/MediatR.Extensions.Caching</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/hflexgrig/MediatR.Extensions.Caching/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/hflexgrig/MediatR.Extensions.Caching.git</RepositoryUrl>
+        <PackageTags>MediatR cache inmemorycache redis rediscache distributedcache</PackageTags>
+        <PackageReleaseNotes>First release of MediatR caching</PackageReleaseNotes>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
