--- a/src/Hflex.MediatR.Extensions.Redis/Hflex.MediatR.Extensions.Redis.csproj
+++ b/src/Hflex.MediatR.Extensions.Redis/Hflex.MediatR.Extensions.Redis.csproj
@@ -13,6 +13,7 @@
         <RepositoryUrl>https://github.com/hflexgrig/MediatR.Extensions.Caching.git</RepositoryUrl>
         <PackageTags>MediatR cache inmemorycache redis rediscache distributedcache</PackageTags>
         <PackageReleaseNotes>First release of MediatR Redis caching</PackageReleaseNotes>
+        <PackageVersion>1.0.2</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
