--- a/src/Hflex.MediatR.Extensions.InMemoryCaching/Hflex.MediatR.Extensions.InMemoryCaching.csproj
+++ b/src/Hflex.MediatR.Extensions.InMemoryCaching/Hflex.MediatR.Extensions.InMemoryCaching.csproj
@@ -9,15 +9,23 @@
         <Description>MediatR extension for in memory caching</Description>
         <Copyright>2022</Copyright>
         <PackageProjectUrl>https://github.com/hflexgrig/MediatR.Extensions.Caching</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/hflexgrig/MediatR.Extensions.Caching/blob/main/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/hflexgrig/MediatR.Extensions.Caching.git</RepositoryUrl>
         <PackageTags>MediatR cache inmemorycache redis rediscache distributedcache</PackageTags>
         <PackageReleaseNotes>First release of MediatR InMemory caching</PackageReleaseNotes>
-        <PackageVersion>1.0.5</PackageVersion>
+        <PackageVersion>1.0.6</PackageVersion>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Hflex.MediatR.Extensions.Caching\Hflex.MediatR.Extensions.Caching.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Include="LICENSE" Pack="true" PackagePath=""/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath=""/>
+    </ItemGroup>
 </Project>
